# Bit

./: README.md  bit.cabal
app/: Main.hs
src/: Bit.hs
test/: Spec.hs
