name:                bit
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/wangbj/bit#readme
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           3-Clause BSD
category:            misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bit
  build-depends:       QuickCheck >= 2.8.1
                     , array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , criterion >= 1.1.0.0
                     , random >= 1.1
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

executable bit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       QuickCheck >= 2.8.1
                     , array >= 0.5.1.0
                     , base
                     , bit
                     , criterion >= 1.1.0.0
                     , random >= 1.1
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

test-suite bit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.8.1
                     , array >= 0.5.1.0
                     , base
                     , bit
                     , criterion >= 1.1.0.0
                     , random >= 1.1
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/bit
